--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.13.0"
+    "mysql2": "^3.13.0",
+    "uuid": "^11.1.0"
   }
 }
